# news_curator_os

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.claude/skills/news-curator/: SKILL.md
.claude/skills/news-curator/scripts/: check_server.sh  curate.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md  commit-strategy.md  review.md
openspec/: config.yaml
openspec/changes/bootstrap-news-curation-platform/: design.md  proposal.md  tasks.md
openspec/changes/integrate-search-agents-audit/: design.md  proposal.md  tasks.md
openspec/specs/news-curation-pipeline/: spec.md
openspec/specs/operations-dashboard/: spec.md
scripts/: check_dashboard.sh  run_dashboard.sh  run_terminal_batch.sh  run_terminal_flow.sh  run_terminal_workflow.sh
src/news_curator_os/: agent_runtime.py  agents.py  app.py  cli.py  config.py  deep_pipeline.py  main.py  models.py  pipeline.py  repository.py  search.py  tavily_search.py  text_utils.py  workflow.py
src/news_curator_os/application/: __init__.py  services.py
src/news_curator_os/infrastructure/: __init__.py  bootstrap.py
src/news_curator_os/static/: app.css
src/news_curator_os/templates/: dashboard.html
tests/: test_app.py  test_cli.py  test_degradation.py  test_e2e_live.py  test_search_and_agents.py  test_service.py
